# opusenc-rs

./: CHANGELOG.md  COPYING  Cargo.toml  README.md  crates.js  help.html  index.html  release.toml  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: ci.yaml  docs.yaml
examples/: file_api.rs  pull_api.rs  speech_orig.wav.license
opusenc/: all.html  enum.Error.html  enum.MappingFamily.html  enum.OpusencError.html  enum.PicardTag.html  enum.PictureType.html  enum.RecommendedTag.html  fn.abi_version.html  fn.version_str.html  index.html  sidebar-items.js  struct.Comments.html  struct.Encoder.html  type.Result.html
opusenc-sys/: Cargo.toml  README.md  build.rs  wrapper.h
opusenc-sys/src/: lib.rs
opusenc/comments/: enum.PicardTag.html  enum.PictureType.html  enum.RecommendedTag.html  struct.Comments.html
opusenc/encoder/: enum.MappingFamily.html  struct.Encoder.html
opusenc_sys/: all.html  constant.INT16_MAX.html  constant.INT16_MIN.html  constant.INT32_MAX.html  constant.INT32_MIN.html  constant.INT8_MAX.html  constant.INT8_MIN.html  constant.INTPTR_MAX.html  constant.INTPTR_MIN.html  constant.INT_FAST16_MAX.html  constant.INT_FAST16_MIN.html  constant.INT_FAST32_MAX.html  constant.INT_FAST32_MIN.html  constant.INT_FAST8_MAX.html  constant.INT_FAST8_MIN.html  constant.INT_LEAST16_MAX.html  constant.INT_LEAST16_MIN.html  constant.INT_LEAST32_MAX.html  constant.INT_LEAST32_MIN.html  constant.INT_LEAST8_MAX.html  constant.INT_LEAST8_MIN.html  constant.OPE_ALLOC_FAIL.html  constant.OPE_API_VERSION.html  constant.OPE_BAD_ARG.html  constant.OPE_CANNOT_OPEN.html  constant.OPE_CLOSE_FAIL.html  constant.OPE_GET_COMMENT_PADDING_REQUEST.html  constant.OPE_GET_DECISION_DELAY_REQUEST.html  constant.OPE_GET_HEADER_GAIN_REQUEST.html  constant.OPE_GET_MUXING_DELAY_REQUEST.html  constant.OPE_GET_NB_COUPLED_STREAMS_REQUEST.html  constant.OPE_GET_NB_STREAMS_REQUEST.html  constant.OPE_GET_SERIALNO_REQUEST.html  constant.OPE_INTERNAL_ERROR.html  constant.OPE_INVALID_ICON.html  constant.OPE_INVALID_PICTURE.html  constant.OPE_OK.html  constant.OPE_SET_COMMENT_PADDING_REQUEST.html  constant.OPE_SET_DECISION_DELAY_REQUEST.html  constant.OPE_SET_HEADER_GAIN_REQUEST.html  (+316 more)
src/: comments.rs  encoder.rs  error.rs  lib.rs  options.rs
(+51 files in other folders)
