[workspace]
members = [".", "opusenc-sys"]

[package]
name = "opusenc"
version = "0.3.0"
edition = "2021"
authors = ["d-k-bo <d-k-bo@mailbox.org>"]
description = "High-level bindings for libopusenc."
repository = "https://github.com/d-k-bo/opusenc-rs"
license = "BSD-3-Clause"
keywords = ["opus", "vorbis", "codec", "audio", "music"]
categories = ["api-bindings", "multimedia::audio"]

[features]
default = []
encoder-options = []

[dependencies]
cstr8 = { version = "0.1.4", default-features = false }
num_enum = "0.7.2"
opusenc-sys = { version = "0.3.0", path = "opusenc-sys" }

[dev-dependencies]
hound = "3.5.1"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "## \\[Unreleased\\]"
replace = """## [Unreleased]\n\n## [{{version}}] - {{date}}"""
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\[Unreleased\\]: "
replace = """[Unreleased]: https://github.com/d-k-bo/opusenc-rs/compare/{{tag_name}}...HEAD\n[{{version}}]: """
exactly = 1
